--- a/home.html
+++ b/home.html
@@ -22,13 +22,13 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a style="color: whitesmoke" class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+        <a style="color: whitesmoke" class="nav-link" href="/Tourist_website/home.html">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a style="color: whitesmoke" class="nav-link" href="hotel.html">Hotels</a>
+        <a style="color: whitesmoke" class="nav-link" href="/Tourist_website/hotel.html">Hotels</a>
       </li>
       <li class="nav-item">
-        <a style="color: whitesmoke" class="nav-link" href="holidays.html">Holidays</a>
+        <a style="color: whitesmoke" class="nav-link" href="/Tourist_website/holidays.html">Holidays</a>
       </li>
       <li class="nav-item dropdown">
         <a style="color: whitesmoke" class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
